[metadata]
name = miqcli
author = Red Hat Inc.
summary = ManageIQ command-line client
license = GPLv3
description-file =
    README.rst
requires-python = >=2.7
classifier =
    Development Status :: 1 - Planning
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
keywords =
    manageiq
    cloudforms
    cloud
    continuous-integration
    ci

[files]
packages =
    miqcli

[entry_points]
console_scripts =
    miqcli = miqcli.cli.main:cli

[wheel]
universal = 1

[build_sphinx]
builders = html,man
source-dir = doc/source
build-dir = doc/build
all-files = 1
warning-is-error = 1